# stockpy

./: README.md  pyproject.toml  pytest.ini
.github/: release.yml
src/: get_current_tick_details.py  historical_prices.py  index_details.py  tick_details.py  tick_validate.py  top_details.py
src/helper/: general.py
test/: test_get_current_tick_details.py  test_historical_prices.py  test_index_details.py  test_tick_details.py  test_tick_validate.py  test_top_details.py
test/test_helper/: test_general.py
